--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Samvaad - Chat App</title>
+		<link
+			rel="stylesheet"
+			href="//unpkg.com/feathers-chat@4.0.0/public/base.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="//unpkg.com/feathers-chat@4.0.0/public/chat.css"
+		/>
 	</head>
 	<body></body>
 </html>
