--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
 			href="//unpkg.com/feathers-chat@4.0.0/public/chat.css"
 		/>
 	</head>
-	<body></body>
+	<body>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
+		<script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+	</body>
 </html>
