--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,12 @@
 		/>
 	</head>
 	<body>
+		<div id="app" class="flex flex-column"></div>
+
 		<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
 		<script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
+
+		<script src="app.js"></script>
 	</body>
 </html>
