--- a/public/index.html
+++ b/public/index.html
@@ -23,3 +23,16 @@
 		<script src="app.js"></script>
 	</body>
 </html>
+
+<!-- <main class="flex flex-column">
+	<header class="title-bar flex flex-row flex-center">
+		<div class="title-wrapper block center-element">
+			<img
+				class="logo"
+				src="http://feathersjs.com/img/feathers-logo-wide.png"
+				alt="Feathers Logo"
+			/>
+			<span class="title">Chat</span>
+		</div>
+	</header>
+</main> -->
