Added section for rendering all messages on login

--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,20 @@
 			<span class="title">Chat</span>
 		</div>
 	</header>
+
+	<div class="flex flex-row flex-1 clear">
+		<aside class="sidebar col col-3 flex flex-column flex-space-betweeen">
+			<header class="flex flex-row flex-center">
+				<h4 class="font-300 text-center">
+					<span class="font-600 online-count">0</span> users
+				</h4>
+			</header>
+
+			<ul class="flex flex-column flex-1 list-unstyled user-list"></ul>
+
+			<footer class="flex flex-row flex-center">
+				<a href="#" id="logout" class="button button-primary">Sign Out</a>
+			</footer>
+		</aside>
+	</div>
 </main> -->
